# skilled_codex_var_annotation

./: .gitignore  README.md  exploring.ipynb  mcp-config.example.json  pyproject.toml  requirements.txt
.codex/skills/validate-vcf-to-parquet/: SKILL.md
.codex/skills/validate-vcf-to-parquet/agents/: openai.yaml
.codex/skills/validate-vcf-to-parquet/references/: vcf-validation.md
.codex/skills/validate-vcf-to-parquet/scripts/: vcf_to_parquet.py
.codex/skills/variant-annotation/: SKILL.md  SKILL.md~
data/: synthetic_clinvar.parquet  synthetic_gnomad.parquet  synthetic_omim.parquet
examples/: sample.vcf
scripts/: generate_synthetic_data.py  smoke_test_mcp.py
src/skilled_mcp_var_annotation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/variant_annotation/: __init__.py  annotation.py  clinvar.py  schema.py  server.py  vcf.py
src/variant_annotation/schemas/: annotated_variant_table.schema.json
