[project]
name = "skilled-mcp-var-annotation"
version = "0.1.0"
description = "Minimal Codex skill plus MCP server for synthetic variant annotation."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
]

[project.optional-dependencies]
llm = [
  "openai>=2.0.0",
]

[project.scripts]
variant-annotate = "variant_annotation.cli:main"
variant-annotation-mcp = "variant_annotation.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
variant_annotation = ["schemas/*.json"]
